--- a/app/src/main/res/layout/activity_display_comp.xml
+++ b/app/src/main/res/layout/activity_display_comp.xml
@@ -30,5 +30,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/headingText"
-        app:srcCompat="@drawable/compass_icon" />
+        app:srcCompat="@drawable/compass_icon_north" />
 </androidx.constraintlayout.widget.ConstraintLayout>
